DB changed a lot

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,15 +28,17 @@
             </ul>
         </div>
     </nav>
+{#    ###########################}
 
-    <div class="block hero1 my-auto" style="background-image:url({% static 'background/hero1.jpg' %});">
+    <div class="block hero1 my-auto" style="background-image:url({% static 'background/hero3.jpg' %});">
         <div class="container-fluid text-center">
-            <h1 class="display-2 text-white">Doppi Milliy Taomlar</h1>
-            <p class="lead text-white">Nimadur yozsa boladi bu yirga!</p>
-            <a href="#menu" class="btn-text lead d-inline-block text-white border-top border-bottom mt-4 pt-1 pb-1">Bugungi Menu bilan tanishing</a>
+            <h1 class="display-2 text-white">Doppi family garden</h1>
+            <p class="lead text-white">Xush kelibsiz !</p>
+            <a href="#menu" class="btn-text lead d-inline-block text-white border-top border-bottom mt-4 pt-1 pb-1">Bugungi Menu</a>
         </div>
     </div>
 
+{#    ###########################}
     <div class="maincontent">
         <div class="container">
             <section id="menu">
