--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,11 @@
 
     <div class="block hero1 my-auto" style="background-image:url({% static 'background/hero3.jpg' %});">
         <div class="container-fluid text-center">
-            <h1 class="display-2 text-white">Doppi family garden</h1>
-            <p class="lead text-white">Xush kelibsiz !</p>
-            <a href="#menu" class="btn-text lead d-inline-block text-white border-top border-bottom mt-4 pt-1 pb-1">Bugungi Menu</a>
+             <img src="{% static 'background/logo.png' %}" alt="Doppi Family Garden" class="img-fluid" style="max-width: 300px;">
+{#            <h1 class="display-2 text-white">Doppi family garden</h1>#}
+            <br>
+{#            <p class="lead text-white">Xush kelibsiz !</p>#}
+            <a href="#menu" class="btn-text lead d-inline-block text-white border-top border-bottom mt-4 pt-1 pb-1">Xush kelibsiz !</a>
         </div>
     </div>
 
