--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 {#                            class="sr-only">(current)</span></a></li>#}
 {#                <li class="nav-item"><a class="nav-link" href="./index.html#menu">Today's Menu</a></li>#}
 {#                <li class="nav-item"><a class="nav-link" href="./login.html">Split Page</a></li>#}
-                <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/alisher_py/">Instagram</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/doppi_family_garden">Instagram</a></li>
             </ul>
         </div>
     </nav>
