--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
   {% endblock %}
 
     <footer class="block footer1 footer text-center">
-        <p>Doppi Milliy Taomlari Menusi 2025</p>
+        <p>Qaldirg'och Milliy Taomlari Menusi 2025</p>
     </footer>
 {#    <footer class="block footer1 footer text-center">#}
 {#        <a href="https://www.instagram.com/alisher_py/"> <p>Doppi Milliy Taomlari Menusi 2025</p></a>#}
