--- a/restaurant/templates/restaurant/restaurant_list.html
+++ b/restaurant/templates/restaurant/restaurant_list.html
@@ -11,7 +11,7 @@
     <ul>
         {% for restaurant in restaurants %}
             <li>
-                <a href="{% url 'restaurant_detail' restaurant.uid %}">
+                <a href="{% url 'restaurant:restaurant_detail' restaurant.uid %}">
                     {{ restaurant.name }}
                 </a>
             </li>
