--- a/meal/templates/menu1.html
+++ b/meal/templates/menu1.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'menu1/css/style.css' %}" />
+    <script src="{% static 'menu1/js/jquery.min.js' %}"></script>
+
     <title>Digital menu</title>
 </head>
 
