--- a/user/templates/index.html
+++ b/user/templates/index.html
@@ -48,7 +48,7 @@
           <li><a href="#hero" class="active">Bosh sahifa<br></a></li>
           <li><a href="#about">D-Menu haqida</a></li>
           <li><a href="#namuna">Namunalar</a></li>
-          <li><a href="{% url 'restaurant:restaurant_list' %}">Hamkorlarimiz</a></li>
+          <li><a href="{% url 'restaurant:restaurant_list' %}">Mizojlarimiz</a></li>
 
           <li><a href="#contact">Contact</a></li>
         </ul>
