--- a/restaurant/templates/restaurant/restaurant_list2.html
+++ b/restaurant/templates/restaurant/restaurant_list2.html
@@ -1,74 +1,63 @@
 {% load static %}
+{% load i18n %}
+
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <meta name="description" content="">
-        <meta name="author" content="">
+    <title>{% trans 'Mijozlarimiz' %}</title>
 
-        <title>Hamkorlar</title>
-        <!-- CSS FILES -->
-{#        <link rel="preconnect" href="https://fonts.googleapis.com">#}
-{#        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>#}
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'hamkorlar_static/css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'hamkorlar_static/css/owl.carousel.min.css' %}">
-        <link href="{% static 'hamkorlar_static/css/templatemo-pod-talk.css' %}" rel="stylesheet">
-        {#        <link rel="stylesheet" href="{% static 'hamkorlar_static/css/bootstrap-icons.css' %}">#}
-        {#        <link rel="stylesheet" href="{% static 'hamkorlar_static/css/owl.theme.default.min.css' %}">#}
-    </head>
-    
-    <body>
-        <main>
-            <section class="hero-section">
-                <div class="container">
-                    <div class="row">
+    <!-- CSS FILES -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'hamkorlar_static/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'hamkorlar_static/css/owl.carousel.min.css' %}">
+    <link href="{% static 'hamkorlar_static/css/templatemo-pod-talk.css' %}" rel="stylesheet">
+</head>
 
-                        <div class="col-lg-12 col-12">
-                            <div class="text-center mb-5 pb-2">
-                                <h2 class="text-white">Bizga ishonch bildirgan Restorantlar ro'yxati</h2>
-
-                                <p class="text-white">Istalgan restarantga bosing va u haqida toliq malumotni o'qib oling</p>
-                            </div>
-
-                            <div class="owl-carousel owl-theme">
-
-{% for restaurant in restaurants %}
-<div class="owl-carousel-info-wrap item">
-<a href="{% url 'restaurant:restaurant_detail' restaurant.uid %}">
-
-{#<img src="{{ restaurant.background_image.url }}" class="owl-carousel-image img-fluid" alt="">#}
-<img src="{{ restaurant.background_image.url }}"
-     class="owl-carousel-image img-fluid"
-     alt=""
-     style="width: 100%; height: 300px; object-fit: cover;">
-
-    <div>
-<h4 class="mb-10">
-{{ restaurant.name }}
-</h4>
-</a>
-</div>
-</div>
-{% endfor %}
-
-                            </div>
-                            <div class="text-center mb-3 pb-2">
-                                <a href="{% url 'user:homepage' %}" class="btn custom-btn smoothscroll mt-3">Bosh sahifa</a>
-                            </div>
+<body>
+    <main>
+        <section class="hero-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-12">
+                        <div class="text-center mb-5 pb-2">
+                            <h2 class="text-white">{% trans "Bizga ishonch bildirgan Restorantlar ro'yxati" %}</h2>
+                            <p class="text-white">{% trans "Istalgan restarantga bosing va u haqida toliq malumotni o'qib oling" %}</p>
                         </div>
 
+                        <div class="owl-carousel owl-theme">
+                            {% for restaurant in restaurants %}
+                            <div class="owl-carousel-info-wrap item">
+                                <a href="{% url 'restaurant:restaurant_detail' restaurant.uid %}">
+                                    <img src="{{ restaurant.background_image.url }}"
+                                         class="owl-carousel-image img-fluid"
+                                         alt="{{ restaurant.name }}"
+                                         style="width: 100%; height: 300px; object-fit: cover;">
+                                    <div>
+                                        <h4 class="mb-10">{{ restaurant.name }}</h4>
+                                    </div>
+                                </a>
+                            </div>
+                            {% endfor %}
+                        </div>
+
+                        <div class="text-center mb-3 pb-2">
+                            <a href="{% url 'user:homepage' %}" class="btn custom-btn smoothscroll mt-3">{% trans "Bosh sahifa" %}</a>
+                        </div>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
+    </main>
 
-        <!-- JAVASCRIPT FILES -->
-        <script src="{% static 'hamkorlar_static/js/jquery.min.js' %}"></script>
-{#        <script src="{% static 'hamkorlar_static/js/bootstrap.bundle.min.js' %}"></script>#}
-        <script src="{% static 'hamkorlar_static/js/owl.carousel.min.js' %}"></script>
-        <script src="{% static 'hamkorlar_static/js/custom.js' %}"></script>
+    <!-- JAVASCRIPT FILES -->
+    <script src="{% static 'hamkorlar_static/js/jquery.min.js' %}"></script>
+    <script src="{% static 'hamkorlar_static/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'hamkorlar_static/js/custom.js' %}"></script>
 
-    </body>
+</body>
 </html>
