--- a/static/menu2/assets/saveBasket-d95f81b5-v6.css
+++ b/static/menu2/assets/saveBasket-d95f81b5-v6.css
@@ -1,10 +1,10 @@
-@font-face {
-    font-family: Stratos LC Web;
-    src: url(/assets/StratosLCWeb-Regular-80290cf5-v6.eot);
-    src: local("Stratos LC Web"), local("StratosLCWeb-Regular"), url(/assets/StratosLCWeb-Regular-80290cf5-v6.eot?#iefix) format("embedded-opentype"), url(/assets/StratosLCWeb-Regular-bf531d4c-v6.woff2) format("woff2");
-    font-weight: 400;
-    font-style: normal
-}
+/*@font-face {*/
+/*    font-family: Stratos LC Web;*/
+/*    src: url(/assets/StratosLCWeb-Regular-80290cf5-v6.eot);*/
+/*    src: local("Stratos LC Web"), local("StratosLCWeb-Regular"), url(/assets/StratosLCWeb-Regular-80290cf5-v6.eot?#iefix) format("embedded-opentype"), url(/assets/StratosLCWeb-Regular-bf531d4c-v6.woff2) format("woff2");*/
+/*    font-weight: 400;*/
+/*    font-style: normal*/
+/*}*/
 
 .page-enter-active,
 .page-leave-active {
