menu tez ishlaydi

--- a/user/templates/index.html
+++ b/user/templates/index.html
@@ -6,9 +6,29 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Digital menu</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+
+{#    ##google seaching engine uchun#}
+    <title>QR Kod orqali Raqamli Menyu | DigitalMenu.uz – Restoranlar uchun</title>
+    <meta name="description" content="Restoran va kafe egalari uchun raqamli menyu xizmati! QR kod yordamida tezkor va gigiyenik buyurtma bering. Menyuni osongina o‘zgartiring va mijozlarga qulaylik yarating.">
+    <meta name="keywords" content="raqamli menyu, QR menyu, restoran menyusi, raqamli restoran, online buyurtma, kafe menyusi, digital menu">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Restaurant",
+  "name": "DigitalMenu.uz",
+  "url": "https://digitalmenu.uz",
+  "logo": "https://digitalmenu.uz/logo.png",
+  "description": "QR kodli menyu xizmati – restoran va kafelar uchun innovatsion yechim.QR code menu.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Tashkent",
+    "addressCountry": "UZ"
+  }
+}
+</script>
+{#    ##google seaching engine uchun#}
+
 
   <!-- Favicons -->
   <link href="{% static 'user_static/img/qr.jpg' %}" rel="icon">
